Moved values into constant

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -14,4 +14,6 @@ login.error_message=Authorization error. Please try again.
 register.sign_up=Sign up
 register.email=Email
 register.password=Password
-register.error_message=Authorization error. Please try again.
+register.error_message=Registration error. Please try again.
+
+admin.edit_news=Edit
