added new features

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -1,6 +1,6 @@
 header.log_in=Log in
 header.sign_up=Sign up
-header.sign_out=Sign out
+header.log_out=Log out
 header.news=News
 header.cars=Cars
 header.about=About
