--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>log4j-api</artifactId>
             <version>2.13.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>ckeditor</artifactId>
+            <version>4.4.7</version>
+        </dependency>
     </dependencies>
 
     <build>
