--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,27 @@
         <jsp-file>/WEB-INF/jsp/register.jsp</jsp-file>
     </servlet>
 
+    <servlet>
+        <servlet-name>news</servlet-name>
+        <jsp-file>/WEB-INF/jsp/news.jsp</jsp-file>
+    </servlet>
+
+    <servlet>
+        <display-name>cars</display-name>
+        <servlet-name>cars</servlet-name>
+        <jsp-file>/WEB-INF/jsp/cars.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>cars</servlet-name>
+        <url-pattern>/cars</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>news</servlet-name>
+        <url-pattern>/news</url-pattern>
+    </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
