added new features

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -17,3 +17,11 @@ register.password=Password
 register.error_message=Registration error. Please try again.
 
 admin.edit_news=Edit
+
+car.color=Color
+car.mileage=Mileage
+car.gearbox=Gear box
+car.engine=Engine
+car.class=Class
+car.year=Release year
+car.price=Price
