--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -16,7 +16,8 @@ register.email=Email
 register.password=Password
 register.error_message=Registration error. Please try again.
 
-admin.edit_news=Edit
+admin.edit=Edit
+admin.delete=Delete
 
 car.color=Color
 car.mileage=Mileage
@@ -25,3 +26,5 @@ car.engine=Engine
 car.class=Class
 car.year=Release year
 car.price=Price
+car.order=Order
+admin.add_car=Add new car
