--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -28,3 +28,8 @@ car.class=Class
 car.year=Release year
 car.price=Price
 car.order=Order
+admin.add_news=Add news
+admin.submit=Submit
+admin.preview=Preview
+editor.header=Header
+editor.content=Content
