add ref to login/register

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -9,12 +9,13 @@ login.email=Email
 login.password=Password
 login.log_in=Login
 login.error_message=Authorization error. Please try again.
+login.no_account=Don't have an account?
 
-#TODO: add en and ru
 register.sign_up=Sign up
 register.email=Email
 register.password=Password
 register.error_message=Registration error. Please try again.
+register.have_account=Have an account?
 
 admin.edit=Edit
 admin.delete=Delete
