--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -34,3 +34,6 @@ admin.submit=Submit
 admin.preview=Preview
 editor.header=Header
 editor.content=Content
+delete_dialog.message=Are you sure you want to delete this news?
+delete_dialog.yes=Yes
+delete_dialog.no=No
