--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -37,3 +37,7 @@ editor.content=Content
 delete_dialog.message=Are you sure you want to delete this news?
 delete_dialog.yes=Yes
 delete_dialog.no=No
+locale.change_lang=Change language
+locale.ru=Ru
+locale.en=En
+locale.be=Be
