fix delete dialog

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -34,9 +34,7 @@ admin.submit=Submit
 admin.preview=Preview
 editor.header=Header
 editor.content=Content
-delete_dialog.message=Are you sure you want to delete this news?
-delete_dialog.yes=Yes
-delete_dialog.no=No
+delete_dialog.message=Are you sure you want to delete this?
 locale.change_lang=Change language
 locale.ru=Ru
 locale.en=En
