add new properties for register.jsp

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -42,3 +42,7 @@ locale.be=Be
 header.orders=Orders
 car.plate=Plate
 footer.administrator=Administrator
+register.first_name=First name
+register.second_name=Second name
+register.middle_name=Middle name
+register.phone_number=Phone number
