--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -46,3 +46,8 @@ register.first_name=First name
 register.second_name=Second name
 register.middle_name=Middle name
 register.phone_number=Phone number
+order.passport_number=Passport number
+order.identification_number=Identification number
+order.issue_date=Issue date
+order.start_date=Start date
+order.end_date=End date
