--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>commons-codec</artifactId>
             <version>1.11</version>
         </dependency>
+        <dependency>
+            <groupId>displaytag</groupId>
+            <artifactId>displaytag</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
