add properties for car constants

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -64,3 +64,8 @@ car.class_sport=Sport
 car.class_suv=SUV
 car.class_hatchback=Hatchback
 car.class_pickup=Pick-up
+car.engine_petrol=Petrol
+car.engine_diesel=Diesel
+car.engine_gas=Gas
+car.gearbox_manual=Manual
+car.gearbox_automatic=Automatic
