add properties for car constants

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -69,3 +69,9 @@ car.engine_diesel=Diesel
 car.engine_gas=Gas
 car.gearbox_manual=Manual
 car.gearbox_automatic=Automatic
+car.color_black=Black
+car.color_yellow=Yellow
+car.color_grey=Grey
+car.color_blue=Blue
+car.color_red=Red
+car.color_white=White
