add property for validation

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -76,3 +76,5 @@ car.color_blue=Blue
 car.color_red=Red
 car.color_white=White
 order.not_available=Car is reserved on
+register.validation_message=Invalid data
+editor.error=Something went wrong
