--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -78,3 +78,4 @@ car.color_white=White
 order.not_available=Car is reserved on
 register.validation_message=Invalid data
 editor.error=Something went wrong
+order.already_present=Order is already exists
