add properties for user orders page

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -90,3 +90,5 @@ orders.return_comment=Return comment
 orders.user=User
 orders.status=Status
 orders.action=Actions
+orders.pay=Pay
+orders.rejection_placeholder=Write a comment to the rejection:
