add new properties

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -92,3 +92,8 @@ orders.status=Status
 orders.action=Actions
 orders.pay=Pay
 orders.rejection_placeholder=Write a comment to the rejection:
+payment.holder=Holder of card
+payment.card_number=Card number
+payment.expiry_date=Expiry date
+payment.pay=Pay
+orders.total_price=Total price
