add properties for payment page

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -97,3 +97,6 @@ payment.card_number=Card number
 payment.expiry_date=Expiry date
 payment.pay=Pay
 orders.total_price=Total price
+payment.invalid_card=Invalid card number
+payment.invalid_expiry=Invalid expiry date
+payment.invalid_cvv=Invalid CVV
