--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -110,3 +110,5 @@ car.comments=Comments
 comments.no_comments=No comments
 comments.invalid_content=Invalid content
 comments.write_comment=Write comment
+comments.next=Next
+comments.previous=Previous
