add property for leave comment button

--- a/src/main/resources/content.properties
+++ b/src/main/resources/content.properties
@@ -112,3 +112,4 @@ comments.invalid_content=Invalid content
 comments.write_comment=Write comment
 comments.next=Next
 comments.previous=Previous
+orders.leave_comment=Leave comment
